avoid that saveAs uses filename as directory

BUG: 454648